Ported BoundingBoxUtils to 26.1.x